fixed orverlay margin not showing on bottom

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,7 +22,9 @@ main {
   align-items: center;
   justify-content: center;
 }
-
+.overlay-container {
+  padding: 1%; 
+}
 .overlay-box {
   background-color: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(6px); 
@@ -31,7 +33,6 @@ main {
   height: 100%;       
   width: auto;
   margin: 2%;
-  border: 2px solid rgb(26, 26, 26); 
   border-radius: 8px;
 
 }
